Enhance website content and structure for Hon. Yenge Raphael, including detailed sections for About, Achievements, News, and Contact, along with responsive navigation and footer elements.

--- a/news.html
+++ b/news.html
@@ -1,32 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head -->
-    <title>News & Updates</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>News & Updates - Hon. Yenge Raphael</title>
+    <meta name="description" content="Latest news, events and updates from Hon. Yenge Raphael and Tarka LGA." />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Nav and Hero -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Hero -->
+    <section class="hero bg-primary text-white py-5 mt-5">
+        <div class="container text-center">
+            <h1 class="display-5 fw-bold">News & Updates</h1>
+            <p class="lead">Stay informed on events, announcements and community stories</p>
+        </div>
+    </section>
+
+    <!-- News list -->
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Stay Informed</h2>
-            <!-- Expand teaser to 4-6 full cards with dates, excerpts -->
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card">
                         <div class="card-body">
                             <small class="text-muted">October 28, 2025</small>
                             <h5>Father's Birthday Celebration</h5>
-                            <p>Family gathering highlights roots in service...</p>
-                            <a href="#">Read Full Story</a>
+                            <p>Family gathering highlights roots in service and community values.</p>
+                            <a href="#" class="stretched-link">Read Full Story</a>
                         </div>
                     </div>
                 </div>
-                <!-- Add more -->
+
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <small class="text-muted">October 10, 2025</small>
+                            <h5>One Year Progress Report</h5>
+                            <p>Summary of infrastructure, health and empowerment initiatives since office.</p>
+                            <a href="#" class="stretched-link">Read Full Story</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <small class="text-muted">September 02, 2025</small>
+                            <h5>Community Clean-Up Campaign</h5>
+                            <p>Residents and volunteers joined to improve public spaces across Wannune.</p>
+                            <a href="#" class="stretched-link">Read Full Story</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <small class="text-muted">August 15, 2025</small>
+                            <h5>New Market Stalls Commissioned</h5>
+                            <p>Supporting local traders with safer, cleaner market facilities.</p>
+                            <a href="#" class="stretched-link">Read Full Story</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <a href="index.html" class="btn btn-outline-primary">Back to Home</a>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Connect With Us</h5>
+                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
