--- a/about.html
+++ b/about.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head as index.html -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>About Hon. Yenge Raphael</title>
+    <meta name="description" content="About Hon. Yenge Raphael — background, vision and public service." />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Nav and Hero same as index.html -->
+    <!-- Navigation (same as index.html) -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Hero -->
+    <section class="hero bg-primary text-white py-5 mt-5">
+        <div class="container text-center">
+            <h1 class="display-5 fw-bold">About Hon. Yenge Raphael</h1>
+            <p class="lead">Background, vision and commitment to Tarka Local Government Area</p>
+        </div>
+    </section>
+
+    <!-- Main content (keeps original content) -->
     <section class="py-5">
         <div class="container">
             <div class="row">
@@ -26,6 +57,24 @@
         </div>
     </section>
 
-    <!-- Footer same as index.html -->
+    <!-- Footer (same as index.html) -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Connect With Us</h5>
+                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
