--- a/achievements.html
+++ b/achievements.html
@@ -1,30 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Achievements - Hon. Yenge Raphael</title>
+    <meta name="description" content="Key achievements and milestones delivered under Hon. Yenge Raphael's leadership." />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Nav and Hero -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="achievements.html">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Hero -->
+    <section class="hero bg-primary text-white py-5 mt-5">
+        <div class="container text-center">
+            <h1 class="display-5 fw-bold">Milestones in Service</h1>
+            <p class="lead">Highlights of projects and deliveries for Tarka LGA</p>
+        </div>
+    </section>
+
+    <!-- Achievements list (expanded) -->
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Milestones in Service</h2>
             <div class="row">
-                <!-- Add 6-8 cards like hero teaser, e.g.: -->
                 <div class="col-md-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <div class="card-body">
                             <h5>January 2025: Healthcare Boost</h5>
                             <p>Donated ambulance to Wannune Hospital, enhancing emergency response.</p>
                         </div>
                     </div>
                 </div>
-                <!-- Repeat for others: Transformer install, Office reno, Community events, etc. -->
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5>March 2025: Power Upgrade</h5>
+                            <p>Installed 500KVA transformer at Zongo to improve community electricity supply.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5>May 2025: Office Renovation</h5>
+                            <p>Modernized the Chairman's office to global standards for efficient service delivery.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5>July 2025: Youth & Women Empowerment</h5>
+                            <p>Launched vocational training programmes and micro-grants for small businesses.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Additional items can be added similarly -->
+            </div>
+            <div class="text-center mt-4">
+                <a href="index.html" class="btn btn-outline-primary">Back to Home</a>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Connect With Us</h5>
+                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
