--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Same head -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Contact Hon. Yenge Raphael</title>
+    <meta name="description" content="Contact page for Hon. Yenge Raphael — office location and contact form." />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Nav and Hero -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Hero -->
+    <section class="hero bg-primary text-white py-5 mt-5">
+        <div class="container text-center">
+            <h1 class="display-5 fw-bold">Reach Out</h1>
+            <p class="lead">Office details and a contact form to send messages</p>
+        </div>
+    </section>
+
+    <!-- Contact content -->
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Reach Out</h2>
             <div class="row">
                 <div class="col-md-6">
-                    <form action="https://formspree.io/f/your-id" method="POST"> <!-- Replace with Formspree ID -->
+                    <form action="https://formspree.io/f/your-id" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name" required>
+                            <input name="name" type="text" class="form-control" id="name" required>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" required>
+                            <input name="email" type="email" class="form-control" id="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="5" required></textarea>
+                            <textarea name="message" class="form-control" id="message" rows="5" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
                 </div>
                 <div class="col-md-6">
                     <p><strong>Office:</strong> Tarka LGA Secretariat, Wannune, Benue State</p>
-                    <p><strong>Phone:</strong> +234-XXX-XXXXXX</p> <!-- Add real -->
+                    <p><strong>Phone:</strong> +234-XXX-XXXXXX</p>
                     <p><strong>Email:</strong> info@yengeraphael.com</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> <!-- Tarka coords approx -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Connect With Us</h5>
+                    <p>Follow for updates on Tarka LGA developments.</p>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
