Add timeline functionality with milestones and rendering logic
- Introduced a new JavaScript file (timeline.js) to manage timeline events.
- Defined an array of milestones with dates and events.
- Created a renderTimeline function to dynamically generate timeline items.
- Implemented rendering for teaser (last 3 milestones), full timeline, and achievements timeline on relevant pages.

--- a/achievements.html
+++ b/achievements.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -37,16 +38,21 @@
         </div>
     </section>
 
-    <!-- Achievements list (expanded) -->
+    <!-- Unified Achievements section (merged) -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Milestones in Service</h2>
+            <h2 class="text-center mb-4">Milestones in Service</h2>
+
+            <!-- optional timeline placeholder -->
+            <div id="achievements-timeline" class="mb-5"></div>
+
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5>January 2025: Healthcare Boost</h5>
-                            <p>Donated ambulance to Wannune Hospital, enhancing emergency response.</p>
+                            <small class="text-muted">September 29, 2025</small>
+                            <h5>Healthcare Donations</h5>
+                            <p>First council ambulance & electric bike delivered to Wannune Teaching Hospital to improve emergency response.</p>
                         </div>
                     </div>
                 </div>
@@ -54,8 +60,9 @@
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5>March 2025: Power Upgrade</h5>
-                            <p>Installed 500KVA transformer at Zongo to improve community electricity supply.</p>
+                            <small class="text-muted">September 13, 2025</small>
+                            <h5>Healthcare Center</h5>
+                            <p>Launch of a grassroots healthcare facility in collaboration with local partners.</p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +70,49 @@
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5>May 2025: Office Renovation</h5>
+                            <small class="text-muted">October 7, 2025</small>
+                            <h5>One-Year Scorecard</h5>
+                            <p>Comprehensive review of progress in education, infrastructure, and community support.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">April 12, 2025</small>
+                            <h5>Tribunal Victory</h5>
+                            <p>Election petition dismissed, affirming the mandate and enabling continued service delivery.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- earlier highlighted milestones -->
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">January 2025</small>
+                            <h5>Healthcare Boost</h5>
+                            <p>Donated ambulance to Wannune Hospital, enhancing emergency response across the LGA.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">March 2025</small>
+                            <h5>Power Upgrade</h5>
+                            <p>Installed a 500KVA transformer at Zongo to improve community electricity supply.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">May 2025</small>
+                            <h5>Office Renovation</h5>
                             <p>Modernized the Chairman's office to global standards for efficient service delivery.</p>
                         </div>
                     </div>
@@ -72,14 +121,14 @@
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h5>July 2025: Youth & Women Empowerment</h5>
-                            <p>Launched vocational training programmes and micro-grants for small businesses.</p>
+                            <small class="text-muted">July 2025</small>
+                            <h5>Youth & Women Empowerment</h5>
+                            <p>Launched vocational training programmes and micro-grants supporting small businesses.</p>
                         </div>
                     </div>
                 </div>
-
-                <!-- Additional items can be added similarly -->
             </div>
+
             <div class="text-center mt-4">
                 <a href="index.html" class="btn btn-outline-primary">Back to Home</a>
             </div>
