--- a/news.html
+++ b/news.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -37,13 +38,14 @@
         </div>
     </section>
 
-    <!-- News list -->
+    <!-- Merged News list -->
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Stay Informed</h2>
+
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <div class="card-body">
                             <small class="text-muted">October 28, 2025</small>
                             <h5>Father's Birthday Celebration</h5>
@@ -54,7 +56,7 @@
                 </div>
 
                 <div class="col-md-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <div class="card-body">
                             <small class="text-muted">October 10, 2025</small>
                             <h5>One Year Progress Report</h5>
@@ -65,7 +67,7 @@
                 </div>
 
                 <div class="col-md-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <div class="card-body">
                             <small class="text-muted">September 02, 2025</small>
                             <h5>Community Clean-Up Campaign</h5>
@@ -76,7 +78,7 @@
                 </div>
 
                 <div class="col-md-6 mb-4">
-                    <div class="card">
+                    <div class="card h-100">
                         <div class="card-body">
                             <small class="text-muted">August 15, 2025</small>
                             <h5>New Market Stalls Commissioned</h5>
@@ -85,7 +87,53 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Additional news items (previously in second section) -->
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">Sep 28, 2025</small>
+                            <h5>One-Year Milestone: Impressive Scorecard</h5>
+                            <p>Reflections on infrastructure, education, and healthcare wins...</p>
+                            <blockquote class="twitter-tweet" data-theme="light"><p lang="en" dir="ltr">ONE YEAR IN OFFICE – THE YOUTH O&#39;CLOCK NARRATIVE SCORECARD Today, 7th October 2025...</p></blockquote>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">Sep 13, 2025</small>
+                            <h5>Healthcare Center Project</h5>
+                            <p>Commendable grassroots development in Tarka LGA.</p>
+                            <a href="https://x.com/EphraimSev73998/status/1966793172408750510">View Post</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">Sep 16, 2025</small>
+                            <h5>Celebrating Local Musicians</h5>
+                            <p>Event honoring cultural icons in Wannune.</p>
+                            <a href="https://www.facebook.com/100076159456050/videos/1505717550448999/">Watch Video</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <small class="text-muted">April 12, 2025</small>
+                            <h5>Election Petition Dismissed</h5>
+                            <p>Tribunal upholds victory for Tarka Chairman.</p>
+                            <a href="https://x.com/SonJohnson6735/status/1911037097604964474">Read More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="text-center mt-4">
                 <a href="index.html" class="btn btn-outline-primary">Back to Home</a>
             </div>
@@ -109,6 +157,8 @@
         </div>
     </footer>
 
+    <!-- External scripts -->
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
