--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -38,20 +39,23 @@
     </section>
 
     <!-- Main content (keeps original content) -->
+    
     <section class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2>Background & Vision</h2>
-                    <p>Elected in October 2024 as APC Chairman for Tarka LGA, Hon. Raphael Aondoseer Yenge brings a unique blend of psychology expertise and community service. With 6+ years in NGOs as a research assistant and consultant, he's a member of the Nigerian Psychological Association.</p>
-                    <p>His vision: Sustainable growth through global best practices in planning, healthcare, and infrastructure for Tarka residents.</p>
-                    <img src="https://via.placeholder.com/800x400?text=Family+&+Community" alt="Hon. Yenge with community" class="img-fluid rounded mb-3">
-                    <h3>Personal Commitment</h3>
-                    <ul>
-                        <li>Empowering youth and women in local governance.</li>
-                        <li>Bridging urban-rural divides with tech-enabled services.</li>
-                        <li>Fostering peace and cultural heritage in Benue State.</li>
+                    <h2 aria-label="Background">Background & Vision</h2>
+                    <p>Hon. Raphael Aondoseer Yenge, sworn in October 2024 as APC Executive Chairman of Tarka LGA, declared his candidacy on July 21, 2024, driven by a commitment to serve. With a psychology degree and 6+ years as an NGO research assistant/consultant, he's a Nigerian Psychological Association member focused on empathetic governance.</p>
+                    <p>Post-tribunal clearance (April 12, 2025), his "Youth O'Clock" narrative emphasizes global best practices for planning, bridging urban-rural gaps, and cultural preservation in Benue State.</p>
+                    <img src="https://via.placeholder.com/800x400?text=Community+Engagement" alt="Hon. Yenge engaging with Tarka residents" class="img-fluid rounded mb-3" loading="lazy">
+                    <h3>Core Commitments</h3>
+                    <ul aria-label="Commitments list">
+                        <li>Empowering youth and women through education and skills programs.</li>
+                        <li>Enhancing healthcare access with facilities and donations.</li>
+                        <li>Promoting peace, cultural events (e.g., musician celebrations Sep 16, 2025), and infrastructure.</li>
+                        <li>Fostering worker welfare, as in recent felicitations.</li>
                     </ul>
+                    <div id="full-timeline" class="mt-4"></div> <!-- JS populated -->
                 </div>
             </div>
         </div>
