--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -33,38 +34,81 @@
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
             <h1 class="display-5 fw-bold">Reach Out</h1>
-            <p class="lead">Office details and a contact form to send messages</p>
+            <p class="lead">Office details, contact form and newsletter signup</p>
         </div>
     </section>
 
-    <!-- Contact content -->
+    <!-- Merged Contact + Newsletter section -->
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center mb-5">Reach Out</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <form action="https://formspree.io/f/your-id" method="POST">
-                        <div class="mb-3">
-                            <label for="name" class="form-label">Name</label>
-                            <input name="name" type="text" class="form-control" id="name" required>
+            <h2 class="text-center mb-4">Get in Touch</h2>
+            <p class="text-center text-muted mb-5">Send a message or subscribe to our updates. We aim to respond promptly.</p>
+
+            <div class="row g-4">
+                <div class="col-lg-6">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title">Send a Message</h5>
+                            <form action="https://formspree.io/f/your-id" method="POST" aria-label="Contact form">
+                                <div class="mb-3">
+                                    <label for="name" class="form-label">Name</label>
+                                    <input name="name" id="name" type="text" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input name="email" id="email" type="email" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">Message</label>
+                                    <textarea name="message" id="message" class="form-control" rows="5" required></textarea>
+                                </div>
+                                <div class="d-flex gap-2">
+                                    <button type="submit" class="btn btn-primary">Send Message</button>
+                                    <button type="reset" class="btn btn-outline-secondary">Reset</button>
+                                </div>
+                            </form>
+
+                            <hr class="my-4">
+
+                            <h5 class="card-title">Subscribe for Updates</h5>
+                            <form action="https://your-mailchimp.us20.list-manage.com/subscribe/post?u=xxx&amp;id=yyy" method="post" target="_blank" aria-label="Newsletter signup">
+                                <div class="input-group mb-3">
+                                    <input type="email" name="EMAIL" class="form-control" placeholder="Your email" aria-label="Your email" required>
+                                    <button class="btn btn-outline-primary" type="submit">Subscribe</button>
+                                </div>
+                                <small class="text-muted">We respect your privacy. Unsubscribe anytime.</small>
+                            </form>
                         </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input name="email" type="email" class="form-control" id="email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="message" class="form-label">Message</label>
-                            <textarea name="message" class="form-control" id="message" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send Message</button>
-                    </form>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <p><strong>Office:</strong> Tarka LGA Secretariat, Wannune, Benue State</p>
-                    <p><strong>Phone:</strong> +234-XXX-XXXXXX</p>
-                    <p><strong>Email:</strong> info@yengeraphael.com</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+                <div class="col-lg-6">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">Office & Contact Info</h5>
+                            <p class="mb-1"><strong>Office:</strong> Tarka LGA Secretariat, Wannune, Benue State</p>
+                            <p class="mb-1"><strong>Phone:</strong> +234-XXX-XXXXXX</p>
+                            <p class="mb-3"><strong>Email:</strong> <a href="mailto:info@yengeraphael.com">info@yengeraphael.com</a></p>
+
+                            <h6 class="mt-3">Office Hours</h6>
+                            <p class="mb-3 text-muted">Mon — Fri: 9:00 AM — 4:00 PM</p>
+
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+
+                            <div class="mt-3">
+                                <a href="https://facebook.com/yengeraphael" class="text-decoration-none me-3" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+                                <a href="https://instagram.com/yengeraphael" class="text-decoration-none me-3" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                                <a href="https://x.com/RhalphRay" class="text-decoration-none" aria-label="X / Twitter"><i class="fab fa-x fa-lg"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+
+            <div class="text-center mt-4">
+                <a href="index.html" class="btn btn-outline-primary">Back to Home</a>
             </div>
         </div>
     </section>
