--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hon. Yenge Raphael - Executive Chairman, Tarka LGA</title>
-    <meta name="description" content="Official website of Hon. Yenge Raphael, dedicated to serving Tarka Local Government Area with integrity and progress.">
-    <meta name="keywords" content="Yenge Raphael, Tarka LGA, Benue State, Nigerian politics, community development">
+    <title>Hon. Raphael Aondoseer Yenge - Executive Chairman, Tarka LGA</title>
+    <meta name="description" content="Official site of Hon. Raphael Aondoseer Yenge, APC Chairman of Tarka LGA, Benue State. Committed to infrastructure, healthcare, and youth empowerment since October 2024.">
+    <meta name="keywords" content="Raphael Aondoseer Yenge, Tarka LGA, Benue State, APC, Nigerian politics, community development">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Hon. Raphael Aondoseer Yenge">
+    <meta property="og:description" content="Serving Tarka LGA with integrity and progress.">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630?text=Hon.+Yenge+Raphael">
+    <meta property="og:url" content="https://yengeraphael.com">
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Raphael Aondoseer Yenge",
+        "jobTitle": "Executive Chairman, Tarka Local Government Area",
+        "affiliation": {"@type": "Organization", "name": "All Progressives Congress (APC)"},
+        "url": "https://yengeraphael.com",
+        "sameAs": ["https://www.facebook.com/RaphaelAondoaseerYenge", "https://www.instagram.com/rhalphray/", "https://x.com/RhalphRay"]
+    }
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
@@ -15,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,6 +41,7 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -33,9 +51,9 @@
     <!-- Hero Section -->
     <section class="hero bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="https://via.placeholder.com/200x200?text=Hon.+Yenge+Raphael" alt="Hon. Yenge Raphael portrait" class="rounded-circle mb-3 img-fluid" style="max-width: 200px;">
-            <h1 class="display-4 fw-bold">Hon. Yenge Raphael</h1>
-            <p class="lead">Executive Chairman, Tarka Local Government Area<br>Benue State, Nigeria</p>
+            <img src="img/yenge.jpg" alt="Portrait of Hon. Raphael Aondoseer Yenge" class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
+            <h1 class="display-4 fw-bold">Hon. Raphael Aondoseer Yenge</h1>
+            <p class="lead">Executive Chairman, Tarka Local Government Area<br>Benue State, Nigeria | APC</p>
             <a href="contact.html" class="btn btn-light btn-lg">Get Involved</a>
         </div>
     </section>
@@ -45,16 +63,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h2>Leading with Vision</h2>
-                    <p class="lead">As a dedicated public servant under the All Progressives Congress (APC), I am committed to transforming Tarka LGA through infrastructure, healthcare, and community empowerment. With a background in psychology and over six years in NGOs, I bring empathy and expertise to every initiative.</p>
+                    <h2>Leading with Vision & Empathy</h2>
+                    <p class="lead">Elected October 2024 after declaring candidacy in July, Hon. Yenge—a psychologist with 6+ years in NGOs and Nigerian Psychological Association member—drives sustainable growth in Tarka LGA. Tribunal-cleared in April 2025, his focus: Grassroots infrastructure, healthcare, education, and youth empowerment.</p>
                     <a href="about.html" class="btn btn-primary">Learn More</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Achievements Teaser -->
+    <!-- Timeline Teaser -->
     <section class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-5">Milestones Timeline</h2>
+            <div id="timeline" class="timeline-container"></div> <!-- Populated by JS -->
+            <div class="text-center mt-4">
+                <a href="achievements.html" class="btn btn-primary">Full Timeline</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Achievements Teaser (Updated) -->
+    <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-5">Key Achievements</h2>
             <div class="row">
@@ -62,57 +91,57 @@
                     <div class="card h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-building fa-3x text-primary mb-3"></i>
-                            <h5>Office Renovation</h5>
-                            <p>Modernized the Chairman's office to global standards for efficient service delivery.</p>
+                            <h5>Infrastructure Upgrades</h5>
+                            <p>Office renovations & 500KVA transformer at Zongo for reliable power.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-bolt fa-3x text-primary mb-3"></i>
-                            <h5>Power Supply Upgrade</h5>
-                            <p>Installed 500KVA transformer at Zongo, lighting up communities.</p>
+                            <i class="fas fa-hospital fa-3x text-primary mb-3"></i>
+                            <h5>Healthcare Center Launch</h5>
+                            <p>New facility in Tarka LGA, plus ambulance & electric bike donations to Wannune Hospital (Sep 2025).</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-ambulance fa-3x text-primary mb-3"></i>
-                            <h5>Healthcare Support</h5>
-                            <p>Donated electric bike and ambulance to Wannune Teaching Hospital—first from our council.</p>
+                            <i class="fas fa-graduation-cap fa-3x text-primary mb-3"></i>
+                            <h5>Educational Support</h5>
+                            <p>Grants and scholarships for Tarka youth, part of one-year scorecard.</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="text-center mt-4">
-                <a href="achievements.html" class="btn btn-primary">View All Achievements</a>
+                <a href="achievements.html" class="btn btn-primary">View All</a>
             </div>
         </div>
     </section>
 
-    <!-- News Teaser -->
-    <section class="py-5">
+    <!-- News Teaser (Updated) -->
+    <section class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-5">Latest News</h2>
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/400x250?text=Community+Event" alt="Community celebration" class="card-img-top">
+                        <img src="https://pbs.twimg.com/media/G0tz8YUWIAApflO.jpg" alt="Healthcare center project in Tarka LGA" class="card-img-top" loading="lazy">
                         <div class="card-body">
-                            <h5>Honoring Local Talent in Wannune</h5>
-                            <p class="text-muted">Celebrating musicians and cultural icons—October 2025.</p>
+                            <h5>Grassroots Healthcare Project</h5>
+                            <p class="text-muted">Sep 13, 2025: New center brings development to communities.</p>
                             <a href="news.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/400x250?text=One+Year+Milestone" alt="One-year milestone" class="card-img-top">
+                        <img src="https://via.placeholder.com/400x250?text=One+Year+Milestone" alt="One-year office celebration" class="card-img-top" loading="lazy">
                         <div class="card-body">
-                            <h5>First Year in Office: Progress Report</h5>
-                            <p class="text-muted">Reflecting on infrastructure wins since October 2024.</p>
+                            <h5>One-Year Scorecard: Youth O'Clock Narrative</h5>
+                            <p class="text-muted">Oct 7, 2025: Landmark projects in infrastructure & education.</p>
                             <a href="news.html" class="btn btn-outline-primary">Read More</a>
                         </div>
                     </div>
@@ -124,24 +153,26 @@
         </div>
     </section>
 
-    <!-- Social & Footer -->
+    <!-- Social & Footer (Updated Links) -->
     <footer class="bg-dark text-white py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
-                    <p>Follow for updates on Tarka LGA developments.</p>
-                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                    <p>Follow for real-time updates on Tarka LGA progress.</p>
+                    <a href="https://www.facebook.com/RaphaelAondoaseerYenge" class="text-white me-3" aria-label="Facebook"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://www.instagram.com/rhalphray/" class="text-white me-3" aria-label="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://x.com/RhalphRay" class="text-white me-3" aria-label="X (Twitter)"><i class="fab fa-x-twitter fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
+                    <p>&copy; 2025 Hon. Raphael Aondoseer Yenge. All rights reserved. | Tarka LGA Secretariat, Wannune, Benue State, Nigeria</p>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/timeline.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
