--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Hon. Yenge Raphael</title>
     <meta name="description" content="About Hon. Yenge Raphael — background, vision and public service." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- Navigation (same as index.html) -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -23,43 +25,97 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Hero -->
+    <!-- Hero with Hon. Yenge's Portrait -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
+            <img src="img/rapheyengestanding.jpg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+                class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">About Hon. Yenge Raphael</h1>
             <p class="lead">Background, vision and commitment to Tarka Local Government Area</p>
         </div>
     </section>
 
     <!-- Main content (keeps original content) -->
-    
+
     <section class="py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2 aria-label="Background">Background & Vision</h2>
-                    <p>Hon. Raphael Aondoseer Yenge, sworn in October 2024 as APC Executive Chairman of Tarka LGA, declared his candidacy on July 21, 2024, driven by a commitment to serve. With a psychology degree and 6+ years as an NGO research assistant/consultant, he's a Nigerian Psychological Association member focused on empathetic governance.</p>
-                    <p>Post-tribunal clearance (April 12, 2025), his "Youth O'Clock" narrative emphasizes global best practices for planning, bridging urban-rural gaps, and cultural preservation in Benue State.</p>
-                    <img src="https://via.placeholder.com/800x400?text=Community+Engagement" alt="Hon. Yenge engaging with Tarka residents" class="img-fluid rounded mb-3" loading="lazy">
-                    <h3>Core Commitments</h3>
-                    <ul aria-label="Commitments list">
-                        <li>Empowering youth and women through education and skills programs.</li>
-                        <li>Enhancing healthcare access with facilities and donations.</li>
-                        <li>Promoting peace, cultural events (e.g., musician celebrations Sep 16, 2025), and infrastructure.</li>
-                        <li>Fostering worker welfare, as in recent felicitations.</li>
-                    </ul>
+                    <p>Hon. Raphael Aondoseer Yenge, sworn in October 2024 as APC Executive Chairman of Tarka LGA,
+                        declared his candidacy on July 21, 2024, driven by a commitment to serve. With a psychology
+                        degree and 6+ years as an NGO research assistant/consultant, he's a Nigerian Psychological
+                        Association member focused on empathetic governance.</p>
+                    <p>Post-tribunal clearance (April 12, 2025), his <strong>"Youth O'Clock" narrative</strong>
+                        emphasizes global best practices for planning, bridging urban-rural gaps, and cultural
+                        preservation in Benue State. In his first year (October 2024 - October 2025), he has delivered
+                        on 30+ landmark projects, with the historic institutionalization of BSUTH Annex being the crown
+                        achievement.</p>
+                    <img src="https://via.placeholder.com/800x400?text=Community+Engagement"
+                        alt="Hon. Yenge engaging with Tarka residents" class="img-fluid rounded mb-3" loading="lazy">
+
+                    <div class="alert alert-info mb-4">
+                        <h5><i class="fas fa-clock me-2"></i>The Youth O'Clock Philosophy</h5>
+                        <p class="mb-0">A governance approach that prioritizes youth empowerment, skills development,
+                            and future-focused investments. Under this narrative, over 400 youths have been trained in
+                            various skills, 120 students received scholarships, and critical infrastructure has been
+                            modernized to global standards.</p>
+                    </div>
+
+                    <h3>Core Commitments & Achievements</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul aria-label="Commitments list">
+                                <li>✅ Empowering youth and women through education and skills programs (400+ trained)
+                                </li>
+                                <li>✅ Enhancing healthcare access with BSUTH Annex institutionalization</li>
+                                <li>✅ Promoting peace, cultural events, and infrastructure development</li>
+                                <li>✅ Fostering worker welfare and community engagement</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>✅ Power restoration to communities through transformer installations</li>
+                                <li>✅ Rural road construction and water provision projects</li>
+                                <li>✅ Security improvements with reduced crime rates</li>
+                                <li>✅ Political inclusion through successful defections to APC</li>
+                            </ul>
+                        </div>
+                    </div>
                     <div id="full-timeline" class="mt-4"></div> <!-- JS populated -->
                 </div>
             </div>
         </div>
     </section>
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <small class="text-muted">April 12, 2025</small>
+                    <h5>Tribunal Victory</h5>
+                    <p>Election petition dismissed, affirming the mandate and enabling continued service
+                        delivery.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card h-100">
+                <div class="card-body">
+                    <small class="text-muted">July 21, 2024</small>
+                    <h5>Candidacy Declaration</h5>
+                    <p>Declared candidacy with commitment to serve and transform Tarka LGA.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer (same as index.html) -->
     <footer class="bg-dark text-white py-4">
@@ -68,8 +124,10 @@
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
                     <p>Follow for updates on Tarka LGA developments.</p>
-                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
@@ -81,4 +139,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
