--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Hon. Yenge Raphael</title>
     <meta name="description" content="Contact page for Hon. Yenge Raphael — office location and contact form." />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html">Yenge Raphael</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -24,7 +27,8 @@
                     <li class="nav-item"><a class="nav-link" href="achievements.html">Achievements</a></li>
                     <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                     <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -33,6 +37,8 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
+            <img src="img/apchat.jpeg" alt="Portrait of Hon. Raphael Aondoseer Yenge"
+                class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">Reach Out</h1>
             <p class="lead">Office details, contact form and newsletter signup</p>
         </div>
@@ -42,7 +48,8 @@
     <section class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Get in Touch</h2>
-            <p class="text-center text-muted mb-5">Send a message or subscribe to our updates. We aim to respond promptly.</p>
+            <p class="text-center text-muted mb-5">Send a message or subscribe to our updates. We aim to respond
+                promptly.</p>
 
             <div class="row g-4">
                 <div class="col-lg-6">
@@ -60,7 +67,8 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="message" class="form-label">Message</label>
-                                    <textarea name="message" id="message" class="form-control" rows="5" required></textarea>
+                                    <textarea name="message" id="message" class="form-control" rows="5"
+                                        required></textarea>
                                 </div>
                                 <div class="d-flex gap-2">
                                     <button type="submit" class="btn btn-primary">Send Message</button>
@@ -71,9 +79,11 @@
                             <hr class="my-4">
 
                             <h5 class="card-title">Subscribe for Updates</h5>
-                            <form action="https://your-mailchimp.us20.list-manage.com/subscribe/post?u=xxx&amp;id=yyy" method="post" target="_blank" aria-label="Newsletter signup">
+                            <form action="https://your-mailchimp.us20.list-manage.com/subscribe/post?u=xxx&amp;id=yyy"
+                                method="post" target="_blank" aria-label="Newsletter signup">
                                 <div class="input-group mb-3">
-                                    <input type="email" name="EMAIL" class="form-control" placeholder="Your email" aria-label="Your email" required>
+                                    <input type="email" name="EMAIL" class="form-control" placeholder="Your email"
+                                        aria-label="Your email" required>
                                     <button class="btn btn-outline-primary" type="submit">Subscribe</button>
                                 </div>
                                 <small class="text-muted">We respect your privacy. Unsubscribe anytime.</small>
@@ -88,19 +98,26 @@
                             <h5 class="card-title">Office & Contact Info</h5>
                             <p class="mb-1"><strong>Office:</strong> Tarka LGA Secretariat, Wannune, Benue State</p>
                             <p class="mb-1"><strong>Phone:</strong> +234-XXX-XXXXXX</p>
-                            <p class="mb-3"><strong>Email:</strong> <a href="mailto:info@yengeraphael.com">info@yengeraphael.com</a></p>
+                            <p class="mb-3"><strong>Email:</strong> <a
+                                    href="mailto:info@yengeraphael.com">info@yengeraphael.com</a></p>
 
                             <h6 class="mt-3">Office Hours</h6>
                             <p class="mb-3 text-muted">Mon — Fri: 9:00 AM — 4:00 PM</p>
 
                             <div class="ratio ratio-16x9">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.123!2d8.123!3d7.456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMjcnMjQuMSJOIDHCsDA3JzI5LjQiTQ!5e0!3m2!1sen!2sng!4v1234567890"
+                                    style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
 
                             <div class="mt-3">
-                                <a href="https://facebook.com/yengeraphael" class="text-decoration-none me-3" aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
-                                <a href="https://instagram.com/yengeraphael" class="text-decoration-none me-3" aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
-                                <a href="https://x.com/RhalphRay" class="text-decoration-none" aria-label="X / Twitter"><i class="fab fa-x fa-lg"></i></a>
+                                <a href="https://facebook.com/yengeraphael" class="text-decoration-none me-3"
+                                    aria-label="Facebook"><i class="fab fa-facebook fa-lg"></i></a>
+                                <a href="https://instagram.com/yengeraphael" class="text-decoration-none me-3"
+                                    aria-label="Instagram"><i class="fab fa-instagram fa-lg"></i></a>
+                                <a href="https://x.com/RhalphRay" class="text-decoration-none"
+                                    aria-label="X / Twitter"><i class="fab fa-x fa-lg"></i></a>
                             </div>
                         </div>
                     </div>
@@ -120,8 +137,10 @@
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
                     <p>Follow for updates on Tarka LGA developments.</p>
-                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
@@ -133,4 +152,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
