--- a/news.html
+++ b/news.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>News & Updates - Hon. Yenge Raphael</title>
-    <meta name="description" content="Latest news, events and updates from Hon. Yenge Raphael and Tarka LGA." />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <div class="row">
+        <!-- Featured: One Year Anniversary -->
+
+
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>News & Updates - Hon. Yenge Raphael</title>
+        <meta name="description" content="Latest news, events and updates from Hon. Yenge Raphael and Tarka LGA." />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
@@ -33,6 +39,8 @@
     <!-- Hero -->
     <section class="hero bg-primary text-white py-5 mt-5">
         <div class="container text-center">
+            <img src="img/raphwithgovalia.jpeg" alt="Portrait of Hon. Yenge Raphael in formal attire"
+                class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
             <h1 class="display-5 fw-bold">News & Updates</h1>
             <p class="lead">Stay informed on events, announcements and community stories</p>
         </div>
@@ -95,7 +103,10 @@
                             <small class="text-muted">Sep 28, 2025</small>
                             <h5>One-Year Milestone: Impressive Scorecard</h5>
                             <p>Reflections on infrastructure, education, and healthcare wins...</p>
-                            <blockquote class="twitter-tweet" data-theme="light"><p lang="en" dir="ltr">ONE YEAR IN OFFICE – THE YOUTH O&#39;CLOCK NARRATIVE SCORECARD Today, 7th October 2025...</p></blockquote>
+                            <blockquote class="twitter-tweet" data-theme="light">
+                                <p lang="en" dir="ltr">ONE YEAR IN OFFICE – THE YOUTH O&#39;CLOCK NARRATIVE SCORECARD
+                                    Today, 7th October 2025...</p>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
@@ -147,8 +158,10 @@
                 <div class="col-md-6">
                     <h5>Connect With Us</h5>
                     <p>Follow for updates on Tarka LGA developments.</p>
-                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
-                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                    <a href="https://facebook.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://instagram.com/yengeraphael" class="text-white me-3"><i
+                            class="fab fa-instagram fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <p>&copy; 2025 Hon. Yenge Raphael. All rights reserved. | Tarka LGA, Benue State, Nigeria</p>
@@ -162,4 +175,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
