refactor: update hero section text for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <!-- Hero Section -->
     <section class="hero bg-primary text-white py-5">
         <div class="container text-center">
-            <img src="img/yenge.jpg" alt="Portrait of Hon. Raphael Aondoseer Yenge"
-                class="rounded-circle mb-3 img-fluid" style="max-width: 200px;" loading="lazy">
-            <h1 class="display-4 fw-bold">Hon. Raphael Aondoseer Yenge</h1>
-            <p class="lead">Executive Chairman, Tarka Local Government Area<br>Benue State, Nigeria | APC</p>
+            <img src="img/yenge.jpg" alt="Portrait of Raphael Aondoseer Yenge" class="rounded-circle mb-3 img-fluid"
+                style="max-width: 200px;" loading="lazy">
+            <h1 class="display-4 fw-bold">Raphael Aondoseer Yenge</h1>
+            <p class="lead">Executive Chairman, Tarka Local Government Council<br>Benue State, Nigeria</p>
             <a href="contact.html" class="btn btn-light btn-lg">Get Involved</a>
         </div>
     </section>
@@ -70,7 +70,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h2>Leading with Vision & Empathy</h2>
-                    <p class="lead">Elected October 2024 after declaring candidacy in July, Hon. Yenge—a psychologist
+                    <p class="lead">Elected October 2024 after declaring candidacy in July, Raphael Aondoseer Yenge—a
+                        psychologist
                         with 6+ years in NGOs and Nigerian Psychological Association member—drives sustainable growth in
                         Tarka LGA. Tribunal-cleared in April 2025, his focus: Grassroots infrastructure, healthcare,
                         education, and youth empowerment through the <strong>"Youth O'Clock Narrative."</strong></p>
@@ -188,7 +189,7 @@
                             class="fab fa-x-twitter fa-2x"></i></a>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p>&copy; 2025 Hon. Raphael Aondoseer Yenge. All rights reserved. | Tarka LGA Secretariat, Wannune,
+                    <p>&copy; 2025 Raphael Aondoseer Yenge. All rights reserved. | Tarka LGA Secretariat, Wannune,
                         Benue State, Nigeria</p>
                 </div>
             </div>
