Update page titles and job title formatting - remove Hon. prefix and use Local Government Council

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hon. Raphael Aondoseer Yenge - Executive Chairman, Tarka LGA</title>
+    <title>Raphael Aondoseer Yenge - Executive Chairman, Tarka Local Government Council</title>
     <meta name="description"
-        content="Official site of Hon. Raphael Aondoseer Yenge, APC Chairman of Tarka LGA, Benue State. Committed to infrastructure, healthcare, and youth empowerment since October 2024.">
+        content="Official site of Raphael Aondoseer Yenge, APC Chairman of Tarka LGA, Benue State. Committed to infrastructure, healthcare, and youth empowerment since October 2024.">
     <meta name="keywords"
         content="Raphael Aondoseer Yenge, Tarka LGA, Benue State, APC, Nigerian politics, community development">
     <!-- Open Graph -->
-    <meta property="og:title" content="Hon. Raphael Aondoseer Yenge">
+    <meta property="og:title" content="Raphael Aondoseer Yenge">
     <meta property="og:description" content="Serving Tarka LGA with integrity and progress.">
     <meta property="og:image" content="img/Raphael">
     <meta property="og:url" content="https://yengeraphael.com">
@@ -20,7 +20,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Raphael Aondoseer Yenge",
-        "jobTitle": "Executive Chairman, Tarka Local Government Area",
+        "jobTitle": "Executive Chairman, Tarka Local Government Council",
         "affiliation": {"@type": "Organization", "name": "All Progressives Congress (APC)"},
         "url": "https://yengeraphael.com",
         "sameAs": ["https://www.facebook.com/RaphaelAondoaseerYenge", "https://www.instagram.com/rhalphray/", "https://x.com/RhalphRay"]
